--- a/Task6.Web/Views/Chat/Index.cshtml
+++ b/Task6.Web/Views/Chat/Index.cshtml
@@ -5,19 +5,21 @@
 <div class="d-flex" style="height: 100vh">
     <div style="width: 90%; margin: 10px">
         <h3>All message</h3>
-        @foreach (var messageData in Model)
-        {
-            <div class="list-group" data-bs-toggle="modal" data-bs-target="#exampleModalScrollable">
-                <div onclick="openMessage(this)" class="list-group-item list-group-item-action" aria-current="true">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1 title-message">@messageData.Header</h6>
-                        <small class="date-send-message">@messageData.DateSend.ToLongDateString()</small>
+        <div class="message-container">
+            @foreach (var messageData in Model)
+            {
+                <div class="list-group mb-1" data-bs-toggle="modal" data-bs-target="#exampleModalScrollable">
+                    <div onclick="openMessage(this)" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h6 class="mb-1 title-message">@messageData.Header</h6>
+                            <small class="date-send-message">@messageData.DateSend.ToLongDateString()</small>
+                        </div>
+                        <p class="mb-1 sender-message">@messageData.SenderName</p>
+                        <div class="body-message" hidden="hidden">@messageData.Body</div>
                     </div>
-                    <p class="mb-1 sender-message">@messageData.SenderName</p>
-                    <div class="body-message" hidden="hidden">@messageData.Body</div>
                 </div>
-            </div>
-        }
+            }
+        </div>
     </div>
     <div class="w-100 d-flex flex-column justify-content-center align-items-center">
         <div style="width: 90%">
@@ -27,9 +29,9 @@
                 <div class="w-100" hidden="hidden" id="result"></div>
             </div>
             <lable>Header</lable>
-            <input class="form-control mb-2" type="text">
+            <input id="header-input" class="form-control mb-2" type="text">
             <lable>Body</lable>
-            <textarea class="form-control mb-2" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control mb-2" id="body-input" rows="3"></textarea>
 
             <button id="send" type="button" class="btn btn-success w-100">Send</button>
         </div>
@@ -55,22 +57,14 @@
     </div>
 </div>
 
+<script>
+window.onload = async function () {
+    await hubConnection.start();
+    search_terms = await getAllName();
+}
+</script>
 <script src="~/js/chat/chat.api.js"></script>
 <script src="~/js/chat/message.js"></script>
-<script src="~/js/chat/autocomplete.js"></script>
 <script src="~/lib/signalr/signalr.js"></script>
-<script>
-const hubConnection = new signalR.HubConnectionBuilder()
-                .withUrl("/chat-hub")
-                .build();
-
-hubConnection.on("Send", function (message) {
-    console.log(message)
-});
-
-document.getElementById("send").addEventListener("click", function (e) {
-    hubConnection.invoke("Send", "wwww");
-});
-
-hubConnection.start();
-</script>
+<script src="~/js/chat/connection.hub.js"></script>
+<script src="~/js/chat/autocomplete.js"></script>
