--- a/Task6.Web/wwwroot/css/autocomplete.css
+++ b/Task6.Web/wwwroot/css/autocomplete.css
@@ -20,3 +20,8 @@
 .input-autocomplete-container {
     position: relative;
 }
+
+.message-container {
+    height: 90vh;
+    overflow-x: hidden;
+}
