--- a/Task6.Web/Views/Login/Index.cshtml
+++ b/Task6.Web/Views/Login/Index.cshtml
@@ -9,10 +9,10 @@
                         <form asp-controller="Login" asp-action="Index">
                             <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
                             <div class="form-outline form-white mb-4">
-                                <input asp-for="Name" type="text" id="typeEmailX" class="form-control form-control-lg"/>
+                                <input asp-for="Name" type="text" id="input-login" class="form-control form-control-lg"/>
                             </div>
-                            
-                            <button class="btn btn-outline-success btn-lg btn-block w-100" type="submit">Login</button>
+
+                            <button class="btn-login btn btn-outline-success btn-lg btn-block w-100" type="submit">Login</button>
                         </form>
                     </div>
                 </div>
@@ -20,3 +20,13 @@
         </div>
     </div>
 </section>
+<script>
+
+let btnLogin = document.querySelector('.btn-login');
+let inputLogin = document.getElementById('input-login');
+btnLogin.disabled = true;
+
+inputLogin.addEventListener('keyup', () => {
+    btnLogin.disabled = inputLogin.value === '' || null;
+});
+</script>
