--- a/Task6.Web/Views/Chat/Index.cshtml
+++ b/Task6.Web/Views/Chat/Index.cshtml
@@ -2,38 +2,41 @@
 
 <link rel="stylesheet" href="~/css/autocomplete.css">
 
-<div class="d-flex" style="height: 100vh">
-    <div style="width: 90%; margin: 10px">
-        <h3>All message</h3>
-        <div class="message-container">
-            @foreach (var messageData in Model)
-            {
-                <div class="list-group mb-1" data-bs-toggle="modal" data-bs-target="#exampleModalScrollable">
-                    <div onclick="openMessage(this)" class="list-group-item list-group-item-action" aria-current="true">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h6 class="mb-1 title-message">@messageData.Header</h6>
-                            <small class="date-send-message">@messageData.DateSend.ToString("MM/dd/yyyy H:mm")</small>
+<div class="container">
+    <div class="row" style="height: 100vh">
+        <div style="width: 90%; margin: 10px" class="col-md">
+            <h4 style="font-weight: 600">All message</h4>
+            <div class="message-container">
+                @foreach (var messageData in Model)
+                {
+                    <div class="list-group mb-1" data-bs-toggle="modal" data-bs-target="#exampleModalScrollable">
+                        <div onclick="openMessage(this)" class="list-group-item list-group-item-action" aria-current="true">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h6 class="mb-1 title-message">Title: @messageData.Header</h6>
+                                <small class="date-send-message">@messageData.DateSend.ToString("MM/dd/yyyy H:mm")</small>
+                            </div>
+                            <p class="mb-1 sender-message">Sender: @messageData.SenderName</p>
+                            <div class="body-message" hidden="hidden">@messageData.Body</div>
                         </div>
-                        <p class="mb-1 sender-message">@messageData.SenderName</p>
-                        <div class="body-message" hidden="hidden">@messageData.Body</div>
                     </div>
-                </div>
-            }
-        </div>
-    </div>
-    <div class="w-100 d-flex flex-column justify-content-center align-items-center">
-        <div style="width: 90%">
-            <lable>User</lable>
-            <div class="input-autocomplete-container">
-                <input id="name-input" class="form-control mb-2" type="text" onkeyup="showResults(this.value)">
-                <div class="w-100" hidden="hidden" id="result"></div>
+                }
             </div>
-            <lable>Header</lable>
-            <input id="header-input" class="form-control mb-2" type="text">
-            <lable>Body</lable>
-            <textarea class="form-control mb-2" id="body-input" rows="3"></textarea>
+        </div>
+        <div class="col-sm w-100 d-flex flex-column justify-content-center align-items-center">
+            <h4 style="font-weight: 600">Send a message</h4>
+            <div style="width: 90%">
+                <lable>User</lable>
+                <div class="input-autocomplete-container">
+                    <input id="name-input" class="form-control mb-2" type="text" onkeyup="showResults(this.value)">
+                    <div class="w-100" hidden="hidden" id="result"></div>
+                </div>
+                <lable>Header</lable>
+                <input id="header-input" class="form-control mb-2" type="text">
+                <lable>Body</lable>
+                <textarea class="form-control mb-2" id="body-input" rows="3"></textarea>
 
-            <button id="send" type="button" class="btn btn-success w-100">Send</button>
+                <button id="send" type="button" class="btn btn-success w-100">Send</button>
+            </div>
         </div>
     </div>
 </div>
