--- a/Task6.Web/Views/Chat/Index.cshtml
+++ b/Task6.Web/Views/Chat/Index.cshtml
@@ -12,8 +12,8 @@
                     <div class="list-group mb-1" data-bs-toggle="modal" data-bs-target="#exampleModalScrollable">
                         <div onclick="openMessage(this)" class="list-group-item list-group-item-action" aria-current="true">
                             <div class="d-flex w-100 justify-content-between">
-                                <h6 class="mb-1 title-message">Title: @messageData.Header</h6>
-                                <small class="date-send-message">@messageData.DateSend.ToString("MM/dd/yyyy H:mm")</small>
+                                <h6 class="mb-1 title-message">Header: @messageData.Header</h6>
+                                <small class="date-send-message">@messageData.DateSend.ToString("MM.dd.yyyy H:mm")</small>
                             </div>
                             <p class="mb-1 sender-message">Sender: @messageData.SenderName</p>
                             <div class="body-message" hidden="hidden">@messageData.Body</div>
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="col-sm w-100 d-flex flex-column justify-content-center align-items-center">
-            <h4 style="font-weight: 600">Send a message</h4>
+            <h4 style="font-weight: 600">Send a messages</h4>
             <div style="width: 90%">
                 <lable>User</lable>
                 <div class="input-autocomplete-container">
